@@ -149,7 +149,7 @@ int new_cellblock(cellarena_t *ca)
 cellarena_t *cellinit( const char *arenaname, const int cellsize, const int alignment, const int policy, const int createkb, const int minfree )
 {
 	cellarena_t *ca = malloc(sizeof(*ca));
-	int n;
+	// int n;
 
 	memset(ca, 0, sizeof(*ca));
 
@@ -178,7 +178,7 @@ cellarena_t *cellinit( const char *arenaname, const int cellsize, const int alig
 	ca->createsize -= 16;
 #endif
 
-	n = ca->createsize / ca->increment;
+	// n = ca->createsize / ca->increment;
 	// hlog( LOG_DEBUG, "cellinit: %-12s block size %4d kB, cells/block: %d", arenaname, createkb, n );
 
 //	pthread_mutex_init(&ca->mutex, NULL);
